--- a/src/assets/style/rsc/_reset-p.scss
+++ b/src/assets/style/rsc/_reset-p.scss
@@ -1,30 +1,41 @@
-*{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    text-decoration: none;
-    font: inherit;
+* {
+	margin: 0;
+	padding: 0;
+	box-sizing: border-box;
+	text-decoration: none;
+	font: inherit;
 }
-*::before, *::after{
-    box-sizing: border-box;
+*::before,
+*::after {
+	box-sizing: border-box;
 }
-a{
-    color: black;
+a {
+	color: black;
 }
-ul,li{
-    list-style: none;
+ul,
+li {
+	list-style: none;
 }
 img,
-svg{
-    display: block;
-    width: 100%;
-    height: auto;
-    max-width: 100%;
-    max-height: 100%;
+svg {
+	display: block;
+	max-width: 100%;
 }
-svg{
-    color: inherit;
+svg {
+	color: inherit;
 }
-input{
-    outline: none;
+input {
+	outline: none;
+}
+button {
+	-webkit-appearance: none;
+	border-radius: 0;
+	text-align: inherit;
+	background: none;
+	box-shadow: none;
+	padding: 0;
+	cursor: pointer;
+	border: none;
+	color: inherit;
+	font: inherit;
 }
