--- a/src/assets/style/_modules.scss
+++ b/src/assets/style/_modules.scss
@@ -3,6 +3,8 @@
 	display: flex;
 	align-items: center;
 	position: relative;
+	border-radius: inherit;
+	overflow: hidden;
 	&__avatar {
 		width: 2.5rem;
 		aspect-ratio: 1;
@@ -26,48 +28,46 @@
 		color: #9daec2;
 		font-weight: 500;
 	}
-	&__share-btn {
+}
+.share-cta {
+	max-width: fit-content;
+	margin-left: auto;
+	position: static;
+	&__btn {
 		width: 2rem;
+		position: relative;
 		aspect-ratio: 1;
 		overflow: hidden;
 		border-radius: 50%;
-		margin-left: auto;
 		display: flex;
 		align-items: center;
 		justify-content: center;
 		color: #6e8098;
 		background: #ecf2f8;
 		z-index: 5;
-		position: relative;
 		&.active {
 			color: #ecf2f8;
 			background: #6e8098;
 		}
 	}
-}
-.share-popup {
-	position: absolute;
-	//top: calc(50% - 0.5rem); (100% - 2rem) / 2 + .75rem
-	top: calc((50% - 1rem) + 0.25rem);
-	right: calc(var(--article-inline-padding) + 0.5rem);
-	bottom: calc((50% - 1rem) + 0.75rem);
-	left: calc(100% - (var(--article-inline-padding) + 1.5rem));
-	padding-inline: 0;
-	border-radius: 1rem;
-
-	background: #48556a;
-	display: flex;
-	align-items: center;
-	z-index: 2;
-	transition: 0.5s;
-	overflow: hidden;
-
-	&.active {
-		padding-inline: 2rem;
+	&__popup {
+		position: absolute;
 		inset: 0;
-		border-radius: 0 0 0.625rem 0.625rem;
-		overflow: visible;
+		transform: translate(0%, -100%);
+		background: #48556a;
+		display: flex;
+		align-items: center;
+		z-index: 2;
+		transition: 0.5s;
+		overflow: hidden;
+		padding-inline: var(--article-inline-padding);
+		&.active {
+			transform: translate(0%, 0%);
+		}
 	}
+}
+
+.share-popup {
 	&__text {
 		color: #9daec2;
 		font-size: 0.8125rem;
@@ -85,36 +85,50 @@
 	}
 }
 @media (min-width: calc(34.375rem + 2 * calc(100vw * 0.06))) {
-	.share-popup {
-		&.active {
-			top: 0;
-			bottom: auto;
-			left: auto;
-			right: calc(var(--article-inline-padding) + 1rem);
-
-			transform: translate(
-				min(50%, calc(var(--article-inline-padding) + 1rem + (100vw * 0.06))),
-				-100%
-			);
-			border-radius: 0.625rem;
-			padding-inline: 2.25rem;
-			padding-block: 1.15rem;
-			filter: drop-shadow(0px 10px 10px rgba(201, 213, 225, 0.5));
-			&::after {
-				content: "";
-				position: absolute;
-				background: #48556a;
-				width: 1rem;
-				aspect-ratio: 1;
-				transform-origin: center;
-				transform: translate(-50%, 50%) rotate(45deg);
-				bottom: 0;
-				right: min(
-					50%,
-					calc(var(--article-inline-padding) + 1rem + (100vw * 0.06))
-				);
-				z-index: 1;
-				isolation: isolate;
+	.id {
+		overflow: visible;
+	}
+	.share-cta {
+		position: relative;
+		&__popup {
+			inset: auto;
+			top: 50%;
+			left: 50%;
+			width: 1rem;
+			height: 1rem;
+			border-radius: 50%;
+			transform: translate(-50%, -50%);
+			padding-inline: 0;
+			background: #48556a;
+			display: flex;
+			align-items: center;
+			z-index: 2;
+			transition: 0.5s;
+			padding-inline: 0;
+			overflow: hidden;
+			&.active {
+				top: 0;
+				transform: translate(-50%, calc(-100% - 1.5rem));
+				width: max-content;
+				height: auto;
+				overflow: visible;
+				padding-inline: 2.25rem;
+				padding-block: 1.15rem;
+				border-radius: 0.625rem;
+				filter: drop-shadow(0px 10px 10px rgba(201, 213, 225, 0.5));
+				&::after {
+					content: "";
+					position: absolute;
+					background: #48556a;
+					width: 1rem;
+					aspect-ratio: 1;
+					transform-origin: center;
+					transform: translate(-50%, 50%) rotate(45deg);
+					bottom: 0;
+					left: 50%;
+					z-index: 0;
+					isolation: isolate;
+				}
 			}
 		}
 	}
